--- a/frontend/src/components/contact/contactPageTools/ContactTools.scss
+++ b/frontend/src/components/contact/contactPageTools/ContactTools.scss
@@ -66,7 +66,7 @@
     }
 
     .contact-media-link-to a {
-      color: $blue;
+      font-size: $sfs;
     }
   }
 }
@@ -93,10 +93,6 @@
     .contact-media-link-to {
       font-size: $nfs;
     }
-
-    .contact-media-link-to a {
-      color: $blue;
-    }
   }
 }
 
@@ -121,10 +117,6 @@
     .contact-media-link-to {
       font-size: $nfs;
     }
-
-    .contact-media-link-to a {
-      color: $blue;
-    }
   }
 }
 
@@ -148,10 +140,6 @@
     .contact-media-link-to {
       font-size: $nfs;
     }
-
-    .contact-media-link-to a {
-      color: $blue;
-    }
   }
 }
 
@@ -174,10 +162,6 @@
 
     .contact-media-link-to {
       font-size: $nfs;
-    }
-
-    .contact-media-link-to a {
-      color: $blue;
     }
   }
 }
