--- a/frontend/src/components/layout/navbar/Navbar.scss
+++ b/frontend/src/components/layout/navbar/Navbar.scss
@@ -15,6 +15,22 @@
     font-style: normal;
   }
 
+  .hamburger-menu {
+    font-size: $afs;
+  }
+
+  .navbar-items {
+    .navbar-item {
+      .active-navbar-item {
+        @include activeNavbarItem;
+      }
+
+      .passive-navbar-item {
+        @include passiveNavbarItem;
+      }
+    }
+  }
+
   .logged-in-user-info {
     display: flex;
     align-items: center;
@@ -105,6 +121,16 @@
     .logged-in-user-menu {
       display: none;
     }
+
+    .navbar-items {
+      .navbar-item {
+        .active-navbar-item {
+          &::after {
+            display: none;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -121,6 +147,16 @@
     .register-login,
     .logged-in-user-menu {
       display: none;
+    }
+
+    .navbar-items {
+      .navbar-item {
+        .active-navbar-item {
+          &::after {
+            display: none;
+          }
+        }
+      }
     }
   }
 }
