--- a/frontend/src/components/parishAdmin/layout/adminHeader/AdminHeader.scss
+++ b/frontend/src/components/parishAdmin/layout/adminHeader/AdminHeader.scss
@@ -38,23 +38,22 @@
     }
   }
 }
-
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
   .admin-dashboard-header {
     display: none;
   }
 }
 
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 768px) {
   .admin-dashboard-header {
     display: none;
   }
 }
 
 /* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .admin-dashboard-header {
     @include flexSpaceBetween;
     padding: 1rem;
@@ -78,10 +77,31 @@
   }
 }
 
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .admin-dashboard-header {
+    @include flexSpaceBetween;
+    padding: 1rem;
+    background-color: $priest-header-bg;
+
+    .admin-image-container {
+      display: none;
+    }
+
+    .admin-dashboard-header-items {
+      .admin-dashboard-header-item {
+        .active-admin-dashboard-header-icon {
+          font-size: $afs;
+        }
+
+        .passive-admin-dashboard-header-icon {
+          font-size: $afs;
+        }
+      }
+    }
+  }
 }
 
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) {
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
 }
