--- a/frontend/src/components/parishAdmin/eventDetails/EventInfos.scss
+++ b/frontend/src/components/parishAdmin/eventDetails/EventInfos.scss
@@ -23,6 +23,10 @@
     }
   }
 
+  .error-message {
+    @include errorMessage;
+  }
+
   .event-infos-wrapper {
     @include shadow1;
     background-color: $form-bg;
