--- a/frontend/src/components/parishAdmin/membersInfos/MembersInfos.scss
+++ b/frontend/src/components/parishAdmin/membersInfos/MembersInfos.scss
@@ -24,6 +24,10 @@
     }
   }
 
+  .error-message {
+    @include errorMessage;
+  }
+
   .parishioners-infos-wrapper {
     @include twoGridTemplateEqualColumns;
 
