--- a/frontend/src/views/adminPages/updateCommitteeProfilePage/UpdateCommitteeProfilePage.scss
+++ b/frontend/src/views/adminPages/updateCommitteeProfilePage/UpdateCommitteeProfilePage.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@import "../../../styles/Variables.scss";
 @import "../../../styles/Mixins.scss";
 
 .update-committee-profile-page {
