--- a/frontend/src/components/forms/updateFinancialReport/UpdateFinancialReport.scss
+++ b/frontend/src/components/forms/updateFinancialReport/UpdateFinancialReport.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/mixins.scss";
-@import "../../../styles/variables.scss";
+@import "../../../styles/Mixins.scss";
+@import "../../../styles/Variables.scss";
 
 .update-financial-report-form {
   .inputs-wrapper {
