--- a/frontend/src/components/forms/annualBudget/BudgetForm.scss
+++ b/frontend/src/components/forms/annualBudget/BudgetForm.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.scss";
-@import "../../../styles/mixins.scss";
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 // Variables for consistent design
 $primary-color: #3498db;
