--- a/frontend/src/components/news/masses/MassList.scss
+++ b/frontend/src/components/news/masses/MassList.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.scss";
-@import "../../../styles/mixins.scss";
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .mass-list-container {
   margin: 1rem 0;
