--- a/frontend/src/components/parishAdmin/comments/AllComments.scss
+++ b/frontend/src/components/parishAdmin/comments/AllComments.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.scss";
-@import "../../../styles/mixins.scss";
+@import "../../../styles/Mariables.scss";
+@import "../../../styles/Mixins.scss";
 
 .all-comment-container {
   .all-comment-title {
