--- a/frontend/src/components/services/popularServices/PopularServices.scss
+++ b/frontend/src/components/services/popularServices/PopularServices.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.scss";
-@import "../../../styles/mixins.scss";
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .popular-services-wrapper {
   padding: 1rem 2rem 2rem 2rem;
