--- a/frontend/src/views/adminPages/updateAnnualBudget/UpdateAnnualBudgetPage.scss
+++ b/frontend/src/views/adminPages/updateAnnualBudget/UpdateAnnualBudgetPage.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.scss";
-@import "../../../styles/mixins.scss";
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .update-annual-budget-page {
   .update-annual-budget-page-container {
