--- a/frontend/src/views/adminPages/updateMassPage/UpdateMassPage.scss
+++ b/frontend/src/views/adminPages/updateMassPage/UpdateMassPage.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.scss";
-@import "../../../styles/mixins.scss";
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .update-mass-service-page {
   .update-mass-service-page-container {
