--- a/frontend/src/components/about/parishPriest/ParishPriest.scss
+++ b/frontend/src/components/about/parishPriest/ParishPriest.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/mixins.scss";
-@import "../../../styles/variables.scss";
+@import "../../../styles/Mixins.scss";
+@import "../../../styles/Variables.scss";
 
 .parish-priest-wrapper {
   @include shadow1;
