SCSS path update

--- a/frontend/src/components/parishAdmin/comments/AllComments.scss
+++ b/frontend/src/components/parishAdmin/comments/AllComments.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/Mariables.scss";
+@import "../../../styles/Variables.scss";
 @import "../../../styles/Mixins.scss";
 
 .all-comment-container {
